# edgecrab

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Makefile  README.md  RELEASING.md  audit_elitizon.md  audit_quanta.md  docker-compose.yml  edgecrab.code-workspace  package-lock.json  package.json  run_cargo_check.sh  runcargo.sh
crates/edgecrab-acp/: Cargo.toml  README.md
crates/edgecrab-acp/src/: lib.rs  permission.rs  protocol.rs  server.rs  session.rs
crates/edgecrab-cli/: Cargo.toml  README.md
crates/edgecrab-cli/src/: acp_setup.rs  app.rs  auth_cmd.rs  backup.rs  banner.rs  bundled_profiles.rs  cli_args.rs  commands.rs  cron_cmd.rs  doctor.rs  dump_cmd.rs  edit_diff.rs  fuzzy_selector.rs  gateway_browser.rs  gateway_catalog.rs  gateway_cmd.rs  gateway_presentation.rs  gateway_setup.rs  honcho_cmd.rs  image_models.rs  logging.rs  logs_cmd.rs  main.rs  markdown_render.rs  mcp_catalog.rs  mcp_oauth.rs  mcp_support.rs  memory_cmd.rs  model_discovery.rs  pairing_cmd.rs  permissions.rs  plugin_toggle.rs  plugins.rs  plugins_cmd.rs  profile.rs  runtime.rs  setup.rs  skin_engine.rs  status_cmd.rs  theme.rs  (+7 more)
crates/edgecrab-cli/tests/: gap_audit.rs  gateway_status_e2e.rs  mcp_e2e.rs  plugins_e2e.rs  session_e2e.rs  setup_e2e.rs  worktree_e2e.rs
crates/edgecrab-core/: Cargo.toml  README.md
crates/edgecrab-core/src/: agent.rs  completion_assessor.rs  compression.rs  config.rs  context_engine.rs  context_references.rs  conversation.rs  lib.rs  model_catalog.rs  model_catalog_default.yaml  model_discovery.rs  model_router.rs  pricing.rs  prompt_builder.rs  shadow_judge.rs  steering.rs  sub_agent_runner.rs  tool_result_spill.rs
crates/edgecrab-core/tests/: e2e_copilot.rs  edgequake_poc.rs
crates/edgecrab-cron/: Cargo.toml  README.md
crates/edgecrab-cron/src/: lib.rs  scan.rs  schedule.rs  store.rs  time.rs
crates/edgecrab-gateway/: Cargo.toml  README.md
crates/edgecrab-gateway/src/: api_server.rs  attachment_cache.rs  auth.rs  bluebubbles.rs  channel_directory.rs  config.rs  delivery.rs  dingtalk.rs  discord.rs  email.rs  event_processor.rs  feishu.rs  homeassistant.rs  hooks.rs  interactions.rs  lib.rs  matrix.rs  mattermost.rs  mirror.rs  pairing.rs  platform.rs  proxy.rs  run.rs  sender.rs  session.rs  signal.rs  slack.rs  sms.rs  stream_consumer.rs  telegram.rs  voice_delivery.rs  webhook.rs  webhook_subscriptions.rs  wecom.rs  weixin.rs  weixin_crypto.rs  whatsapp.rs
crates/edgecrab-gateway/tests/: hooks_integration.rs
crates/edgecrab-lsp/: Cargo.toml  README.md
crates/edgecrab-lsp/src/: capability.rs  config.rs  diagnostics.rs  edit.rs  enrichment.rs  error.rs  lib.rs  manager.rs  position.rs  protocol.rs  render.rs  sync.rs  tools.rs
crates/edgecrab-lsp/tests/: lsp_tools_integration.rs
crates/edgecrab-migrate/: Cargo.toml  README.md
crates/edgecrab-migrate/src/: common.rs  compat.rs  hermes.rs  lib.rs  openclaw.rs  report.rs
crates/edgecrab-migrate/tests/: hermes_migration_e2e.rs
crates/edgecrab-plugins/: Cargo.toml
crates/edgecrab-plugins/src/: config.rs  context.rs  discovery.rs  error.rs  guard.rs  hermes.rs  host_api.rs  hub.rs  lib.rs  manifest.rs  types.rs
crates/edgecrab-sdk/: Cargo.toml  Makefile  README.md
crates/edgecrab-sdk-core/: Cargo.toml
crates/edgecrab-sdk-core/src/: agent.rs  config.rs  convert.rs  error.rs  lib.rs  memory.rs  session.rs  tools.rs  types.rs
crates/edgecrab-sdk-macros/: Cargo.toml
crates/edgecrab-sdk-macros/src/: lib.rs
crates/edgecrab-sdk/examples/: README.md  basic_usage.rs  batch_processing.rs  business_case_showcase.rs  config_profiles.rs  cost_aware_review.rs  e2e_smoke.rs  full_conversation.rs  memory_usage.rs  model_catalog.rs  multi_agent.rs  parallel_research.rs  safe_sql_agent.rs  session_aware_support.rs  session_management.rs
crates/edgecrab-sdk/src/: lib.rs
crates/edgecrab-security/: Cargo.toml  README.md
crates/edgecrab-security/src/: approval.rs  command_scan.rs  injection.rs  lib.rs  normalize.rs  path_jail.rs  path_policy.rs  proxy.rs  redact.rs  url_safety.rs
crates/edgecrab-state/: Cargo.toml  README.md
crates/edgecrab-state/src/: lib.rs  schema.sql  session_db.rs
crates/edgecrab-tools/: Cargo.toml  README.md  build.rs
crates/edgecrab-tools/src/: approval_runtime.rs  command_interaction.rs  config_ref.rs  edit_contract.rs  execution_fs.rs  execution_tmp.rs  fuzzy_match.rs  lib.rs  local_pty.rs  macos_permissions.rs  macos_permissions_stub.rs  path_utils.rs  process_table.rs  provider_factory.rs  read_tracker.rs  registry.rs  shell_syntax.rs  toolsets.rs  vision_models.rs
crates/edgecrab-tools/tests/: core_tools_surface_e2e.rs  file_staleness_e2e.rs  moa_e2e.rs  terminal_backends.rs
crates/edgecrab-types/: Cargo.toml  README.md
crates/edgecrab-types/src/: config.rs  error.rs  harness.rs  lib.rs  message.rs  tool.rs  trajectory.rs  usage.rs
sdks/nodejs-native/: .gitignore  Cargo.toml  Makefile  README.md  index.d.ts  index.js  package-lock.json  package.json  wrapper.d.ts  wrapper.js
sdks/nodejs-native/examples/: README.md  basic_usage.mjs  business_case_showcase.mjs  cost_aware_review.mjs  e2e_smoke.mjs  multi_agent_pipeline.mjs  parallel_research.mjs  safe_sql_agent.mjs  session_aware_support.mjs
sdks/nodejs-native/src/: agent.rs  config.rs  lib.rs  types.rs
sdks/nodejs-native/tests/: sdk_e2e.test.ts
sdks/pypi-cli/: .gitignore  README.md  pyproject.toml
sdks/pypi-cli/edgecrab_cli/: _binary.py  _entry.py
sdks/python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
sdks/python/edgecrab/: __init__.py  _version.py  agent.py  cli.py  client.py  types.py
sdks/python/examples/: README.md  basic_usage.py  business_case_showcase.py  cost_aware_review.py  e2e_smoke.py  multi_agent_pipeline.py  parallel_research.py  safe_sql_agent.py  session_aware_support.py
sdks/python/src/: agent.rs  config.rs  error.rs  lib.rs  types.rs
sdks/python/tests/: conftest.py  test_agent.py  test_async_client.py  test_cli.py  (+3 more)
sdks/wasm/: .gitignore  Cargo.toml  Makefile  README.md  package.json
(+640 files in other folders)
