[workspace]
resolver = "2"
members = [
    "crates/edgecrab-types",
    "crates/edgecrab-security",
    "crates/edgecrab-state",
    "crates/edgecrab-cron",
    "crates/edgecrab-lsp",
    "crates/edgecrab-tools",
    "crates/edgecrab-core",
    "crates/edgecrab-cli",
    "crates/edgecrab-gateway",
    "crates/edgecrab-acp",
    "crates/edgecrab-migrate",
]
[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.86.0"
license = "Apache-2.0"
repository = "https://github.com/raphaelmansuy/edgecrab"
authors = ["Raphael Mansuy"]

[workspace.dependencies]
# Internal crates
edgecrab-types = { path = "crates/edgecrab-types", version = "0.2.1" }
edgecrab-security = { path = "crates/edgecrab-security", version = "0.2.1" }
edgecrab-state = { path = "crates/edgecrab-state", version = "0.2.1" }
edgecrab-cron = { path = "crates/edgecrab-cron", version = "0.2.1" }
edgecrab-lsp = { path = "crates/edgecrab-lsp", version = "0.2.1" }
edgecrab-tools = { path = "crates/edgecrab-tools", version = "0.2.1" }
edgecrab-core = { path = "crates/edgecrab-core", version = "0.2.1" }
edgecrab-gateway = { path = "crates/edgecrab-gateway", version = "0.2.1" }
edgecrab-acp = { path = "crates/edgecrab-acp", version = "0.2.1" }
edgecrab-migrate = { path = "crates/edgecrab-migrate", version = "0.2.1" }

# Shared across workspace — single version for consistency
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = { package = "serde_norway", version = "0.9.42" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
async-lsp = { version = "0.2.3", features = ["omni-trait", "tokio"] }
lsp-types = { version = "0.97.0", features = ["proposed"] }
regex = "1"
url = "2"

# LLM backend
edgequake-llm = { version = "0.5.1", features = ["bedrock"] }

# Image processing (vision tool: resize/compress before base64 encoding)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "functions"] }

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
tui-textarea = { package = "tui-textarea-2", version = "0.10.2" }
dialoguer = "0.12"
unicode-width = "0.2"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
axum = "0.7"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Security
aho-corasick = "1"
unicode-normalization = "0.1"
strip-ansi-escapes = "0.2"
secrecy = { version = "0.10", features = ["serde"] }

# Crypto
sha2 = "0.10"
base64 = "0.22"
cron = "0.12"
urlencoding = "2"

# Utilities
dirs = "5"
shellexpand = "3"
dashmap = "6"
inventory = "0.3"
strsim = "0.11"
shell-words = "1"
similar = "2"
notify = "7"
rand = "0.9"
tempfile = "3"
which = "7"
dotenvy = "0.15"
mockall = "0.13"
libc = "0.2"
portable-pty = "0.9"

# Execution backends
bollard = { version = "0.18", features = ["ssl"] }
openssh = { version = "0.11", features = ["native-mux"] }

# Testing
proptest = "1"
insta = "1"
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

# [patch.crates-io]
# Uncomment the line below for local development against a sibling edgequake-llm checkout:
# edgequake-llm = { path = "../edgequake-llm" }
