[package]
name = "edgecrab-acp"
description = "Agent Communication Protocol server for IDE integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
edgecrab-core = { path = "../edgecrab-core" }
edgecrab-types = { path = "../edgecrab-types" }
edgecrab-tools = { path = "../edgecrab-tools" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
