[package]
name = "edgecrab-cli"
description = "Interactive TUI CLI for the EdgeCrab agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "edgecrab"
path = "src/main.rs"

[dependencies]
edgecrab-core = { path = "../edgecrab-core", version = "0.1.0" }
edgecrab-types = { path = "../edgecrab-types", version = "0.1.0" }
edgecrab-state = { path = "../edgecrab-state", version = "0.1.0" }
edgecrab-tools = { path = "../edgecrab-tools", version = "0.1.0" }
edgecrab-cron = { path = "../edgecrab-cron", version = "0.1.0" }
edgecrab-acp = { path = "../edgecrab-acp", version = "0.1.0" }
edgecrab-gateway = { path = "../edgecrab-gateway", version = "0.1.0" }
edgecrab-migrate = { path = "../edgecrab-migrate", version = "0.1.0" }
edgequake-llm = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
dialoguer = { workspace = true }
strsim = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
arboard = "3"
unicode-width = { workspace = true }
similar = { workspace = true }
which = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
