[package]
name = "edgecrab-cli"
description = "Interactive TUI CLI for the EdgeCrab agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "edgecrab"
path = "src/main.rs"

[features]
default = ["bedrock-model-discovery"]
bedrock-model-discovery = ["edgecrab-core/bedrock-model-discovery"]

[dependencies]
edgecrab-core = { workspace = true }
edgecrab-plugins = { workspace = true }
edgecrab-types = { workspace = true }
edgecrab-state = { workspace = true }
edgecrab-tools = { workspace = true }
edgecrab-cron = { workspace = true }
edgecrab-acp = { workspace = true }
edgecrab-gateway = { workspace = true }
edgecrab-migrate = { workspace = true }
edgequake-llm = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
dialoguer = { workspace = true }
strsim = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
shell-words = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
arboard = "3"
unicode-width = { workspace = true }
similar = { workspace = true }
which = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
serial_test = "3"
