[package]
name = "edgecrab-gateway"
description = "Multi-platform messaging gateway for the EdgeCrab agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
edgecrab-core = { workspace = true }
edgecrab-types = { workspace = true }
edgecrab-state = { workspace = true }
edgecrab-tools = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
which = { workspace = true }
async-stream = "0.3"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "pool", "rustls-tls", "hostname", "builder"] }
md5 = "0.7"

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
edgequake-llm = { workspace = true }
