[package]
name = "edgecrab-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-lsp = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
similar = { workspace = true }
inventory = { workspace = true }
edgequake-llm = { workspace = true }
dirs = { workspace = true }

edgecrab-types = { path = "../edgecrab-types", version = "0.1.0" }
edgecrab-security = { path = "../edgecrab-security", version = "0.1.0" }
edgecrab-tools = { path = "../edgecrab-tools", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
