[package]
name = "edgecrab-lsp"
description = "LSP client tools for EdgeCrab: code navigation, diagnostics, and workspace edits via language servers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mock_lsp_server"
path = "src/bin/mock_lsp_server.rs"
test = false
bench = false

[dependencies]
async-lsp = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
similar = { workspace = true }
inventory = { workspace = true }
edgequake-llm = { workspace = true }
dirs = { workspace = true }

edgecrab-types = { workspace = true }
edgecrab-security = { workspace = true }
edgecrab-tools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
