[package]
name = "edgecrab-state"
description = "Persistence layer: SQLite session DB (FTS5), config manager, memory store, skill store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
edgecrab-types = { path = "../edgecrab-types" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
