[package]
name = "edgecrab-types"
description = "Shared types for the EdgeCrab agent: messages, tool schemas, errors, config types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
edgequake-llm = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
