[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecrab-sdk"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "llm", "edgecrab", "coding-agent"]
description = "Python SDK for EdgeCrab — a Rust-native autonomous coding agent"
dependencies = [
    "httpx>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.34,<1",
    "respx>=0.22,<1",
]

[project.urls]
Homepage = "https://github.com/raphaelmansuy/edgecrab"
Repository = "https://github.com/raphaelmansuy/edgecrab"
Documentation = "https://github.com/raphaelmansuy/edgecrab/tree/main/sdks/python"

[project.scripts]
edgecrab = "edgecrab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["edgecrab*"]

[tool.setuptools.dynamic]
version = { attr = "edgecrab._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
