[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "edgecrab"
version = "0.7.0"
description = "EdgeCrab AI Agent SDK — build autonomous agents with Python"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "llm", "edgecrab", "autonomous"]

[project.urls]
Homepage = "https://github.com/raphaelmansuy/edgecrab"
Repository = "https://github.com/raphaelmansuy/edgecrab"
Documentation = "https://github.com/raphaelmansuy/edgecrab/tree/main/sdks/python"

[tool.maturin]
python-source = "python"
module-name = "edgecrab._native"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark tests that require an asyncio event loop",
]
