[package]
name = "edgecrab-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raphaelmansuy/edgecrab"
authors = ["Raphael Mansuy"]
description = "WASM bindings for the EdgeCrab AI agent SDK — browser & edge runtime"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[workspace]
